# hs-template

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  hs-template.cabal
app/: Main.hs
